# k8s-policy-engine

./: Dockerfile  Makefile  README.md  go.mod  go.sum
app/: Dockerfile  Makefile  go.mod  go.sum  test.sh
app/cmd/backend/: main.go
app/cmd/cli/: device_flow.go  main.go
app/deploy/: deploy.yaml
app/pkg/audit/: middleware.go  middleware_test.go  schema.go  sink.go  sink_test.go
app/pkg/auth/: device_flow.go  device_flow_test.go  jwt.go  jwt_test.go  oidc.go  oidc_test.go  session.go  session_test.go
app/pkg/db/: kubernetes.go  sqlite.go
app/pkg/detector/: features.go  features_test.go  onnx.go  onnx_test.go  reactor.go  reactor_test.go
cmd/backend/: main.go
cmd/cli/: main.go
deploy/: deploy.yaml
ml/: .gitignore  evaluation.ipynb  export_onnx.py  generate_traffic.py  hpo.py  pyproject.toml  split.py  train_lgbm.py  train_xgb.py
ml/data/: join.py  materialise.py  materialise.sql
ml/data/models/: hpo_lgbm_params.json  hpo_xgb_params.json  lgbm_loss_curve.json  lgbm_model.txt  xgb_loss_curve.json  xgb_model.json
pkg/db/: sqlite.go
pkg/models/: request.go  token.go
